The first setting for blog

--- a/_config.yml
+++ b/_config.yml
@@ -1,16 +1,13 @@
-title:              Clean Blog
-email:              your-email@example.com
-description:        A Blog Theme by Start Bootstrap
-author:             Start Bootstrap
-baseurl:            "/startbootstrap-clean-blog-jekyll"
-url:                "https://startbootstrap.github.io"
+title:              on1ystar's blog
+email:              tjdwls0607@naver.com
+description:        Space Only For Me.
+author:             on1ystar
+baseurl:            ""
+url:                "https://on1ystar.github.io"
 
 # Social Profiles
-twitter_username:   SBootstrap
-github_username:    StartBootstrap
-facebook_username:  StartBootstrap
-instagram_username:  
-linkedin_username:
+github_username:    on1ystar
+
 
 # Add your google-analytics ID here to activate google analytics
 google_analytics:   UA-XXXXXXXXX-X # out your google-analytics code
