change user name

--- a/_config.yml
+++ b/_config.yml
@@ -1,12 +1,12 @@
-title:              onlystar's blog
+title:              on1ystar's blog
 email:              tjdwls0607@naver.com
 description:        Space Only For Me.
-author:             onlystar
+author:             on1ystar
 baseurl:            ""
-url:                "https://onlystar.github.io"
+url:                "https://on1ystar.github.io"
 
 # Social Profiles
-github_username:    onlystar
+github_username:    on1ystar
 
 
 # Add your google-analytics ID here to activate google analytics
