--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@
 title:               on1ystar
 tagline:             '생각을 정리, 기록하는 곳'
 description:         ''
-url:                 http://on1ystar.github.io
+url:                 https://on1ystar.github.io
 baseurl:             ''
 paginate:            5
 permalink:           pretty
