--- a/_config.yml
+++ b/_config.yml
@@ -1,22 +1,23 @@
 # Setup
-title:               on1ystar
-tagline:             '생각을 정리, 기록하는 곳'
-description:         ''
-url:                 https://on1ystar.github.io
-baseurl:             ''
-paginate:            5
-permalink:           pretty
+title: on1ystar
+tagline: "생각을 정리, 기록하는 곳"
+description: ""
+url: https://on1ystar.github.io
+baseurl: ""
+paginate: 5
+permalink: pretty
 
 # About/contact
 author:
-  name:              on1ystar
-  url:               https://on1ystar.github.com
-  email:             tjdwls0607@naver.com
+  name: on1ystar
+  url: https://on1ystar.github.com
+  email: tjdwls0607@naver.com
 
 # Gems
 plugins:
   - jekyll-paginate
+  - jekyll-sitemap
 
 # Custom vars
-version:             1.1.0
+version: 1.1.0
 google_analytics_id: #UA-XXXX-Y
