--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 # Setup
 title: on1ystar
-tagline: "생각을 정리, 기록하는 곳"
+tagline: "머릿속을 정리, 기록하는 곳"
 description: ""
 url: https://on1ystar.github.io
 baseurl: ""
